<resources>
    <string name="app_name">Plantr</string>
    <string name="welcomeText">Group v2 15</string>
    <string name="memberThree">Matthew Nolan</string>
    <string name="memberTwo">Calvin Fuller</string>
    <string name="memberOne">Katey Almeida</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="go">GO</string>
    <string name="plantr_messages">Plantr Messages</string>
    <string name="login">Login</string>
    <string name="username">Username:</string>
    <string name="enter_username">Enter Username</string>
    <string name="history">History</string>
    <string name="plantr">Plantr</string>
    <string name="my_plants">My Plants</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="favePlant">Favorite Plant: </string>
    <string name="profileName">Name: </string>
    <string name="lastActivity">Last Activity: </string>
    <string name="logout">Logout</string>
    <string name="close">X</string>
    <string name="comments">Comments:</string>
    <string name="light">Light:</string>
    <string name="plant_name">Plant Name</string>
    <string name="plant_profile">Plant Profile</string>
    <string name="species_name">Species Name</string>
    <string name="water">Water:</string>
    <string name="this_will_be_the_nav_bar_eventually">This will be the nav bar eventually</string>
    <string name="cancel">Cancel</string>
    <string name="name_to_give_plant">Name to Give Plant</string>
    <string name="plant_species_name">Plant Species Name</string>
    <string name="ok">Add Plant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plant_photo">Plant Photo</string>
    <string name="add_a_plant_photo">Add a Plant Photo!</string>
    <string name="water_measure">Water/Measure</string>
    <string name="watered">Watered?</string>
    <string name="plant_height_inches">Plant Height(Inches)</string>
    <string name="password">Password</string>
    <string name="new_user">New User</string>
    <string name="edit">Edit</string>
    <string name="edit_account_name">Change Account Name</string>
    <string name="edit_fave_plant">Select Favorite Plant</string>
    <string name="edit_profile_picture">Change Profile Picture</string>
    <string name="filterResults">Filter Results</string>
    <string name="last_measured">Last Measured:</string>
    <string name="last_watered">Last Watered:</string>
    <string name="last_measured_date">Last Measured Date:</string>
    <string name="last_watered_date">Last Watered Date:</string>
    <string name="current_streak">Current Streak:</string>
</resources>