<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@drawable/ic_launcher_plantr_foreground"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType = "center"
        android:background = "#08510B"
        android:contentDescription="@string/app_name"
        />
    <EditText
        android:id="@+id/plantNameEnter"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop = "16dp"
        android:layout_marginStart = "4dp"
        android:layout_marginEnd ="4dp"
        android:layout_marginBottom = "4dp"
        android:fontFamily = "sans-serif"
        android:hint="@string/name_to_give_plant"
        android:autofillHints="Name To Give Plant" />
    <EditText
        android:id="@+id/plantSpeciesEnter"
        android:inputType = "text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop = "4dp"
        android:layout_marginStart = "4dp"
        android:layout_marginEnd ="4dp"
        android:layout_marginBottom = "16dp"
        android:fontFamily = "sans-serif"
        android:hint="@string/plant_species_name"
        android:autofillHints="Plant Species Name"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop = "4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/add_a_plant_photo"
        android:autofillHints="Add a Plant Photo!"
        android:onClick="addPlantPhoto"/>
</LinearLayout>