<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightYellow">

    <TextView
        android:id="@+id/lastMeasuredText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arima_madurai"
        android:text="@string/last_measured"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lastWatered"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="@+id/measureDateText"
        app:layout_constraintTop_toBottomOf="@+id/measureDateText" />

    <TextView
        android:id="@+id/plantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arima_madurai"
        android:text="@string/plant_name"
        android:textAlignment="center"
        android:textColor="@color/darkGreen"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/speciesName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plantImage" />

    <ImageView
        android:id="@+id/plantImage"
        android:layout_width="310dp"
        android:layout_height="278dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/plant_profile"
        app:layout_constraintBottom_toTopOf="@+id/plantName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_yellow_sticker_foreground" />

    <TextView
        android:id="@+id/speciesName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/arima_madurai"
        android:text="@string/species_name"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/measureDateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plantName" />

    <TextView
        android:id="@+id/measureDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:fontFamily="@font/arima_madurai"
        android:text="@string/last_measured_date"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lastMeasuredText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plantImage" />

    <Button
        android:id="@+id/waterButton"
        android:layout_width="142dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/darkGreen"
        android:fontFamily="@font/arima_madurai"
        android:onClick="AddWater"
        android:text="@string/water_measure"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastWatered" />

    <TextView
        android:id="@+id/lastWatered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arima_madurai"
        android:text="@string/last_watered_date"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/waterButton"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="@+id/measureDateText"
        app:layout_constraintTop_toBottomOf="@+id/lastMeasuredText" />

    <!--com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/plantDetailsNavBar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="655dp"/-->

    <!--TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_will_be_the_nav_bar_eventually"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="674dp" /-->
</androidx.constraintlayout.widget.ConstraintLayout>