<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlantrHomePage"
    android:background="@color/darkGreen">

    <TextView
        android:id="@+id/homeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arima_madurai"
        android:text="@string/plantr"
        android:textColor="@color/lightYellow"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/myPlantsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/myPlantsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightYellow"
        android:fontFamily="@font/arima_madurai"
        android:text="@string/my_plants"
        android:onClick="openMyPlants"
        android:textColor="@color/darkGreen"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/myProfileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeTextView" />

    <Button
        android:id="@+id/myProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightYellow"
        android:fontFamily="@font/arima_madurai"
        android:text="@string/my_profile"
        android:textColor="@color/darkGreen"
        android:textSize="16sp"
        android:textStyle="bold"
        android:onClick="openProfile"
        app:layout_constraintBottom_toTopOf="@+id/settingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myPlantsButton" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lightYellow"
        android:fontFamily="@font/arima_madurai"
        android:text="@string/settings"
        android:textColor="@color/darkGreen"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myProfileButton" />
</androidx.constraintlayout.widget.ConstraintLayout>